<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        android:id="@+id/detail_frag"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_detail_poster"
                style="@style/DetailImage" />

            <TextView
                android:id="@+id/movie_detail_title"
                style="@style/DetailTitle" />

            <Button
                android:id="@+id/add_favorite"
                style="@style/ButtonTrailerFavorite"
                android:text="@string/add_to_favorites"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/DetailPretext"
                    android:text="@string/release_date" />

                <TextView
                    android:id="@+id/movie_detail_date"
                    style="@style/DetailText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/DetailPretext"
                    android:text="@string/synopsis" />

                <TextView
                    android:id="@+id/movie_detail_synopsis"
                    style="@style/DetailText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/DetailPretext"
                    android:text="@string/vote" />

                <TextView
                    android:id="@+id/movie_detail_vote"
                    style="@style/DetailText" />

                <TextView
                    style="@style/DetailText"
                    android:text="@string/end_vote" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

            <TextView
                style="@style/DetailTitle"
                android:text="@string/trailer_heading"/>

            <ListView
                android:id="@+id/trailer_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"/>

            <TextView
                style="@style/DetailTitle"
                android:text="@string/review_heading"/>

            <ListView
                android:id="@+id/review_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>
